--- a/php/backup/workRequest.css
+++ b/php/backup/workRequest.css
@@ -28,6 +28,6 @@ h1 {
 				 0px 8px 13px rgba(0, 0, 0, 0.1),
 				 0px 18px 23px rgba(0, 0, 0, 0.1);
 }
-.modal{
+.modals{
 	color: #000000 !important;
 }
